--- a/caravan/style.css
+++ b/caravan/style.css
@@ -38,10 +38,23 @@ header .headline{
 .main-visual {
     width: 100%;
     height: 300px;
+    background-image: url(img/mv.jpg);
+    background-size: cover;
+    background-position: center;
 }
 .main-visual-content {
-    width: 350px;
+    width: 40%;
     height: 300px;
+    background-color: rgba( 0, 0, 0, 0.5);
+    text-align: center;
+    padding-top: 105px;
+}
+.main-text{
+    color: #fff;
+}
+.main-name{
+    color: #fff;
+    margin-top: 30px;
 }
 
 .main{width: 840px;
@@ -58,7 +71,7 @@ header .headline{
 
 footer{
     width: 100%;
-    height: 120px;
+    text-height: 120px;
     text-align: center;
     padding: 50px 0;
     background-color: #848282;
