--- a/ex6/style.css
+++ b/ex6/style.css
@@ -4,15 +4,10 @@
  box-sizing: border-box;
 }
 
-.clearfix:after{
- content: "";
- display: block;
- clear: both;
-    
-}
 
 header{
- height: 400px;   
+ height: 400px;  
+ width: 100%; 
  background-image: url(img/mv.jpg);
  background-position: bottom;
  background-size: cover;
@@ -27,25 +22,36 @@ header{
 
 main{
  width: 840px;
- margin: 0 auto;   
+ margin: 50px auto;   
  color: darkgrey;
  padding: 50px,0;
  
 
 
 }
-.webcanp-clearfix{
- padding: 30px,0;  
+.webcanp{
+ margin-bottom: 30px;
+ padding-bottom: 30px;
  border-bottom: 1px solid darkgray;
- text-align: left
+ 
 
 }
-.webcanppro-clearfix{
- padding: 30px ,0;
- border-bottom: 1px solid darkgrey;
+.webcanppro{
+ margin-bottom: 30px;
+ padding-bottom: 30px;
+ border-bottom: 1px solid darkgray;
+ 
 
 }
+.webcanpwoman {
+ margin-bottom: 30px;
+ padding-bottom: 30px;
+ border-bottom: 1px solid darkgray;
 
-.weblink{
-    color: darkgrey;
-}
+ }
+
+ .webcanpcareer{
+  margin-bottom: 30px;
+  padding-bottom: 30px;
+  border-bottom: 1px solid darkgray;
+ }
