--- a/caravan/style.css
+++ b/caravan/style.css
@@ -18,6 +18,7 @@ a{
 header {
     width: 100%;
     text-align: center;
+    padding: 15px,0;
 }
 header .headline{
     font-size: 32px;
@@ -103,10 +104,68 @@ main{
     font-size: 11px;
 }
 .sidebar{
-    width: 240px;
+    width: 230px;
     float: left;    
 }
-
+.sidebar-headline,.instagram-headline,.categories-headline{
+    border-bottom: 8px solid #f7f7f7;
+    text-align: center;
+    line-height: 0.6;  
+}
+.sidebar-contents{
+    padding: 50px 0;
+}
+.popular-text,.categories-text{
+    padding-bottom: 5px;
+    border-bottom: 1px solid #f7f7f7;
+    margin-bottom: 5px;
+}
+.popular-text:last-child,.categories-text:last-child{
+    margin: 0;
+    padding: 0;
+    border: none;
+}
+.instagram-box{
+    float: left;
+    width: 110px;
+    padding-top: 110px;
+    background-size: cover;
+}
+.instagram-box:nth-child(odd){
+    margin: 0 10px 10px 0;
+}
+.instagram-box:nth-child(1){
+    background-image: url(img/airport.jpg);
+}
+.instagram-box:nth-child(2){
+    background-image: url(img/japan.jpg);
+}
+.instagram-box:nth-child(3){
+    background-image: url(img/snow.jpg);
+}
+.instagram-box:nth-child(4){
+    background-image: url(img/japan2.jpg);
+}
+.instagram-box:nth-child(5){
+    background-image: url(img/lake.jpg);
+}
+.instagram-box:nth-child(6){
+    background-image: url(img/road.jpg);
+}
+.pagination{
+ text-align: center;
+ padding-top: 50px;
+}
+.pagination p{
+ width: 30px;
+ height: 30px;
+ display: inline-block;
+ color: white;
+ background-color: #acabab;
+ border-radius: 3px;
+ padding: 0,5px;
+ line-height: 30px;   
+}
 footer{
     width: 100%;
     text-height: 120px;
