--- a/ex7/style.css
+++ b/ex7/style.css
@@ -16,16 +16,12 @@ main{
     margin-bottom: 50px;
 }
 .list{
-    color: dimgray;
     padding: 20px;
     list-style: none;
 }
 .list:nth-child(odd){
     background-color: darkgray;
 }
-
-
-
 .box{
     background-color: yellow;
     width: 30%;
@@ -44,6 +40,6 @@ main{
 .box:nth-child(3n){
     margin-right: 0;
 }
-.box:nth-child(-n+3){
+.box:nth-last-child(-n+3){
     margin-bottom: 0;
 }
